--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,25 +32,25 @@ jobs:
           ruby-version: 2.7
       - run: bundle install
 
-      - name: Publish to GPR
-        run: |
-          mkdir -p $HOME/.gem
-          touch $HOME/.gem/credentials
-          chmod 0600 $HOME/.gem/credentials
-          printf -- "---\n:github: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
-          rake build
-          gem push --KEY github --host https://rubygems.pkg.github.com/${OWNER} pkg/*.gem
-        env:
-          GEM_HOST_API_KEY: "Bearer ${{secrets.GITHUB_TOKEN}}"
-          OWNER: ${{ github.repository_owner }}
-
-      # - name: Publish to RubyGems
+      # - name: Publish to GPR
       #   run: |
       #     mkdir -p $HOME/.gem
       #     touch $HOME/.gem/credentials
       #     chmod 0600 $HOME/.gem/credentials
-      #     printf -- "---\n:rubygems_api_key: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
+      #     printf -- "---\n:github: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
       #     rake build
-      #     rake release
+      #     gem push --KEY github --host https://rubygems.pkg.github.com/${OWNER} pkg/*.gem
       #   env:
-      #     GEM_HOST_API_KEY: "${{secrets.RUBYGEMS_AUTH_TOKEN}}"
+      #     GEM_HOST_API_KEY: "Bearer ${{secrets.GITHUB_TOKEN}}"
+      #     OWNER: ${{ github.repository_owner }}
+
+      - name: Publish to RubyGems
+        run: |
+          mkdir -p $HOME/.gem
+          touch $HOME/.gem/credentials
+          chmod 0600 $HOME/.gem/credentials
+          printf -- "---\n:rubygems_api_key: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
+          rake build
+          rake release
+        env:
+          GEM_HOST_API_KEY: "${{secrets.RUBYGEMS_AUTH_TOKEN}}"
